--- a/jam/_base.scss
+++ b/jam/_base.scss
@@ -30,8 +30,8 @@ $xgap-tb:   32px;
 $xgap-st:   44px;
 $xgap-lg:   52px;
 
-$plus:      414px;  // iPhone 5 landscape + 1px
-$tablet:    768px;  // iPhone 6, 7, 8 Plus landscape + 1px
+$plus:      411px;  // Pixel 2 portrait
+$tablet:    768px;  // iPad 10" portrait
 $standard:  1025px; // iPad 10" landscape, 13" portrait + 1px
 $large:     1367px; // Common 13" laptop size + 1px
 
